--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -1,5 +1,3 @@
-
-
 /* Stil for "back"-lenken */
 .back {
   position: absolute;
@@ -16,4 +14,14 @@
 /* Hover-effekt for "back"-lenken */
 .back:hover {
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.background-fun {
+  background-image: url("../assets/coolbackgrounds-fractalize-cool_backgrounds.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
