--- a/pomodoro/styles.css
+++ b/pomodoro/styles.css
@@ -22,6 +22,76 @@
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; /* horizontal centering */
+  align-items: center; /* vertical centering */
+  height: 100vh;
+}
+
+.container {
+  position: relative;
+  margin: 0 auto;
+  max-width: 400px;
+  padding: 20px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  font-family: "Rooboto", sans-serif;
+}
+.title {
+  font-size: 40px;
+  margin-bottom: 15;
+  color: peachpuff;
+}
+
+.timer {
+  font-size: 80px;
+  margin: 20px 0;
+  color: darkslateblue;
+}
+
+button {
+  font-size: 20px;
+  padding: 10px 20px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: darkslateblue;
+  color: white;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  transition: opacity 0.3s ease-in-out;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  background-color: slateblue;
+}
+
+#start-button {
+  background-color: seagreen;
+}
+#start-button:hover {
+  background-color: mediumseagreen;
+}
+
+#pause-button {
+  background-color: darkorange;
+}
+#pause-button:hover {
+  background-color: orange;
+}
+#reset-button {
+  background-color: crimson;
+}
+#reset-button:hover {
+  background-color: red;
+}
+#stop-button {
+  background-color: firebrick;
+}
+#stop-button:hover {
+  background-color: darkred;
 }
